coil pain